manifests/bootstrap/argocd/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    tailscale.com/funnel: 'true'
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd
